[package]
name = "infernoplex"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true    # Automatically strip symbols from the binary.
panic = "abort" # Abort on panic. This is what we want for a bot.

[dependencies]
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
serde = "1.0"
log = "0.4"
env_logger = "0.11.3"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "bigdecimal",
    "json",
] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
serde_json = "1.0"
serde_yaml = "0.9"
once_cell = "1.17"
futures-util = "0.3"
indexmap = { version = "2", features = ["serde"] }
strum = "0.26"
strum_macros = "0.26"
rand = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
ring = "0.17"
data-encoding = "2.3"
ts-rs = { version = "8", features = ["chrono-impl"] }
axum = { version = "0.7.5", default-features = true }

[dependencies.tokio]
version = "1"
default-features = true
features = ["full"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend"]

[build-dependencies]
vergen = "7"
anyhow = "1.0"

[dependencies.kittycat]
git = "https://github.com/infinitybotlist/kittycat"
branch = "main"

[dependencies.botox]
git = "https://github.com/infinitybotlist/botox"
branch = "main"
